# hybridnn

./: LICENSE  README.md  pyproject.toml
example/: dataset.csv  example.py
src/hybridnn/: __init__.py  activation.py  preprocessing.py
src/hybridnn_zidny-z/: activation.py  hybridnn.py
