[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridnn"
version = "0.0.21"
authors = [
  { name="Ahmad Zidni Zainul Ikhsan", email="zidnizainul03@gmail.com" },
]
description = "Package for Backpropagation and Hybrid Neural Netwok with Particle Swarm Optimization"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
     "numpy==1.23.2"
]

[project.urls]
Homepage = "https://github.com/zidny-z/hybridnn"
Issues = "https://github.com/zidny-z/hybridnn/issues"

